--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pydantic-settings
-pydantic
+pydantic>=2.0
+pydantic-settings>=2.0
+pytest
+pytest-cov
 alembic
 psycopg2-binary
 sqlalchemy
+python-dotenv
 
