--- a/compose.yml
+++ b/compose.yml
@@ -1,17 +1,17 @@
 services:
   db:
-    image: postgres:16
+    image: postgres:17-alpine
     container_name: brvm_postgres_db
     env_file:
       - .env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   app:
     build: .
     container_name: brvm_app
@@ -19,10 +19,9 @@ services:
       - db
     env_file:
       - .env
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
     volumes:
       - .:/app
+    command: python -m app.main
 
 volumes:
   postgres_data:
