Docker config is ok

--- a/compose.yml
+++ b/compose.yml
@@ -1,26 +1,26 @@
 services:
   db:
-    image: postgres:16
-    container_name: brvm_postgres_db
+    image: postgres:17-alpine
     env_file:
       - .env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "${POSTGRES_PORT}:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   app:
     build: .
-    container_name: brvm_app
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - .env
     volumes:
       - .:/app
+    entrypoint: ["/app/scripts/wait_for_db.sh", "db", "python", "main.py"]
 
 volumes:
   postgres-data:
