--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
+# Core app
 pydantic>=2.0
 pydantic-settings>=2.0
 alembic
 psycopg2-binary
 sqlalchemy
 python-dotenv
+httpx
+beautifulsoup4
+
+# Testing
+pytest
+pytest-asyncio
+respx
+pytest-mock
+
 
 
